refresh syntax for upgraded stylus and jade

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -89,7 +89,7 @@ block content
       include ./social/facebook/fb-recommend-button
 
 
-  script(type='text/coffeescript')
+  script(type='text/coffeescript').
     $ = jQuery
     $ ->course = new EssenceOfCoffeeScript.Course elSpot: '#course-spot'
 
