--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -18,19 +18,19 @@ color-console-dim = #526870
 
 @-o-keyframes highlightinstructions
   0%, 100% { color: color-dark-grey }
-  80% { color color-c5-orange }
+  80% { color: color-c5-orange }
 @-ms-keyframes highlightinstructions
   0%, 100% { color: color-dark-grey }
-  80% { color color-c5-orange }
+  80% { color: color-c5-orange }
 @-moz-keyframes highlightinstructions
   0%, 100% { color: color-dark-grey }
-  80% { color color-c5-orange }
+  80% { color: color-c5-orange }
 @-webkit-keyframes highlightinstructions
   0%, 100% { color: color-dark-grey }
-  80% { color color-c5-orange }
+  80% { color: color-c5-orange }
 @keyframes highlightinstructions
   0%, 100% { color: color-dark-grey }
-  80% { color color-c5-orange }
+  80% { color: color-c5-orange }
 
 ease-transitions()
   -webkit-transition all 0.2s ease
