--- a/jade/social/facebook/fb-init.jade
+++ b/jade/social/facebook/fb-init.jade
@@ -1,5 +1,5 @@
 #fb-root
-script
+script.
   (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
