--- a/jade/social/facebook/fb-recommend-button.jade
+++ b/jade/social/facebook/fb-recommend-button.jade
@@ -1,1 +1,1 @@
-.fb-like(data-href="http://coffeescript.carbonfive.com/", data-send="true", data-width="450", data-show-faces="true", data-font="segoe ui", data-colorscheme="dark", data-action="recommend")
+.fb-like(data-href="http://coffeescript.rylyz.com/", data-send="true", data-width="450", data-show-faces="true", data-font="segoe ui", data-colorscheme="dark", data-action="recommend")
