--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -59,6 +59,11 @@ code
 h3
   code
     font-size 24px
+  a
+    color yellow
+    text-decoration none
+    &:hover
+      color white
 
 html, body
   -webkit-transition top 0.8s ease
