update background image

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,6 +10,7 @@ block head
   script(type='text/javascript', src="./js/vendor/jqconsole.min.js")
 
 block content
-  h1 Essence of CoffeeScript
-  h3
-    a(href='/syntax-shortcuts.html') Tutorial 1: Syntax Shortcuts
+  #toc
+    h1 Essence of CoffeeScript
+    h3
+      a(href='/syntax-shortcuts.html') Tutorial 1: Syntax Shortcuts
