--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -59,12 +59,6 @@ code
 h3
   code
     font-size 24px
-  a
-    text-decoration none
-    color white
-    &:hover
-      color #ffc
-      text-decoration underline
 
 html, body
   -webkit-transition top 0.8s ease
@@ -116,13 +110,19 @@ h1, h2, h3, h4
   font-family font-family-header
 
 h1
-  color #ffc
+  color #224
   font-size 36px
 h2
   font-size 32px
   font-weight normal
 h3
   font-size 24px
+  a
+    text-decoration none
+    color white
+    &:hover
+      color #ffc
+      text-decoration underline
 h4
   font-size 16px
   text-transform uppercase
@@ -216,7 +216,7 @@ html
 body
   #toc
     text-align: center
-    margin: auto
+    margin: 10% auto auto auto
   border 0
   margin 0
   padding 50px
