style splash screen

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -11,6 +11,8 @@ block head
 
 block content
   #toc
-    h1 Essence of CoffeeScript
-    h3
-      a(href='/syntax-shortcuts.html') Tutorial 1: Syntax Shortcuts
+    h1 Learn CoffeeScript in 1 Day
+    h2
+      a(href='/syntax-shortcuts.html')
+        p Essence of CoffeeScript
+        p Syntax Shortcuts
