--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -110,19 +110,13 @@ h1, h2, h3, h4
   font-family font-family-header
 
 h1
-  color #224
+  color #223
   font-size 36px
 h2
   font-size 32px
   font-weight normal
 h3
   font-size 24px
-  a
-    text-decoration none
-    color white
-    &:hover
-      color #ffc
-      text-decoration underline
 h4
   font-size 16px
   text-transform uppercase
@@ -217,6 +211,17 @@ body
   #toc
     text-align: center
     margin: 10% auto auto auto
+    h1
+      font-size 48px
+    h2
+      font-size 40px
+      a
+        text-decoration none
+        color white
+        &:hover
+          color #ffc
+          text-decoration underline
+
   border 0
   margin 0
   padding 50px
