refresh landing page

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -11,8 +11,9 @@ block head
 
 block content
   #toc
-    h1 Learn CoffeeScript in 1 Day
+    h1
+      a(href='/syntax-shortcuts.html')
+        | Essence of CoffeeScript
     h2
       a(href='/syntax-shortcuts.html')
-        p Essence of CoffeeScript
         p Syntax Shortcuts
