--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -213,6 +213,12 @@ body
     margin: 10% auto auto auto
     h1
       font-size 48px
+      a
+        text-decoration none
+        color #6F4E37
+        &:hover
+          color #5F3E27
+          text-decoration underline
     h2
       font-size 40px
       a
