correct the title to say: left to right from line a Read

--- a/jade/course/tips/read-a-line-from-right-to-left.jade
+++ b/jade/course/tips/read-a-line-from-right-to-left.jade
@@ -1,6 +1,6 @@
 data.exercise 
   data.realization.
-    Read a line from right to left
+    left to right from line a Read
   data.example-code.
     console.log 'Hi ' + prompt "What's your nickname?"
   data.instruction Predict what the example code above will do by reading it from right to left.
